# VkEngine

./: .gitignore  CMakeLists.txt  VkRenderer.sln
Test/: Test.vcxproj  Test.vcxproj.filters
Test/src/: Application.cpp  Engine.cpp  Engine.hpp
Test/src/utils/: debugUtils.hpp
application/: Application.cpp  CMakeLists.txt
dependencies/lib/: glfw3.lib
renderer/: CMakeLists.txt  Engine.cpp
renderer/includes/: Engine.hpp
renderer/utils/: debugUtils.hpp  utils.hpp
